...
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"
                android:id="@+id/logoImage"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/logoImage"
                android:background="@drawable/edit_text_style"
                android:hint="@string/hint_email"
...
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/colorHintText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_style"
...
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/colorHintText" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_shape"
...
