...
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hint_email">Email</string>
    <string name="hint_Name">Name (e.g. Sahan Ruwanga)</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="show_register">Do not have an account?</string>
    <string name="show_login">Already have an account?</string>
    <string name="navigate_register">Register here...</string>
    <string name="navigate_login">Go to Login...</string>
    <string name="save">Save</string>
...
