<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sahanruwanga.medcarer.activity.MedicalHistoryActivity"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorBackground">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backIconMedicalHistory"
                android:src="@drawable/ic_action_navigation_arrow_back"
                android:layout_gravity="center_vertical|left"
                android:onClick="backIconClick"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medical History"
                android:id="@+id/toolBarText"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_horizontal|center_vertical"/>

        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchViewMH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultQueryHint="Search..."
                android:background="@drawable/edit_text_style"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/medicalHistoryRecyclerView"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addNewFloatingMH"
            android:background="@color/colorButton"
            android:layout_gravity="bottom|right"
            android:onClick="openAddMedicalRecord"
            android:foregroundGravity="right|bottom"
            android:src="@drawable/ic_add_note"/>
    </FrameLayout>

</RelativeLayout>
